TODO_LIST.txt
- Faire swap()
- Vérifier le binz avec value_compare
- Faire le dernier constructeur de map
- Mettre au propre
- Tout tester

ft_container git:(master) make stack
In file included from tester_stack.cpp:1:
In file included from ./Stack.hpp:5:
./Vector.hpp:304:45: error: unused parameter 'last' [-Werror,-Wunused-parameter]
                        iterator erase( iterator first, iterator last )
                                                                 ^
1 error generated.
make[1]: *** [stack_exec] Error 1
make: *** [stack] Error 2
➜  ft_container git:(master) make map
In file included from tester_map.cpp:2:
In file included from ./Map.hpp:8:
./Tree.hpp:57:11: error: member reference base type 'tree<Key, T, Compare, Allocator> *' is not a structure or union
                                                this.insert(i);
                                                ~~~~^~~~~~~
In file included from tester_map.cpp:2:
./Map.hpp:97:13: error: no matching constructor for initialization of 'std::out_of_range'
                                        throw (std::out_of_range());
                                               ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:145:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const string& __s) : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:146:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const char* __s)   : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:141:29: note: candidate constructor
      (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class _LIBCPP_EXCEPTION_ABI out_of_range
                            ^
In file included from tester_map.cpp:2:
./Map.hpp:105:13: error: no matching constructor for initialization of 'std::out_of_range'
                                        throw (std::out_of_range());
                                               ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:145:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const string& __s) : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:146:40: note: candidate constructor
      not viable: requires single argument '__s', but no arguments were provided
    _LIBCPP_INLINE_VISIBILITY explicit out_of_range(const char* __s)   : logic_error(__s) {}
                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/stdexcept:141:29: note: candidate constructor
      (the implicit copy constructor) not viable: requires 1 argument, but 0 were provided
class _LIBCPP_EXCEPTION_ABI out_of_range
                            ^
3 errors generated.
make[1]: *** [map_exec] Error 1
make: *** [map] Error 2
➜  ft_container git:(master) make vector
In file included from tester_vector.cpp:1:
./Vector.hpp:304:45: error: unused parameter 'last' [-Werror,-Wunused-parameter]
                        iterator erase( iterator first, iterator last )
                                                                 ^
1 error generated.
make[1]: *** [vector_exec] Error 1
make: *** [vector] Error 2
➜  ft_container git:(master)